# rust-ollama

./: .gitignore  Cargo.toml  README.md  curl.txt
_mock-data/: for-embeddings.txt
examples/: c01-simple.rs  c03-chat.rs  c04-embeddings.rs
experimental/: Cargo.toml
experimental/experimental/: first.rs
experimental/src/: lib.rs
olla_tcp/: Cargo.toml
olla_tcp/src/: a.txt
ollama_websocket/: Cargo.toml
ollama_websocket/src/: main.rs
pit/rusty_oll/src/: main.rs
pit2/olla_tcp/src/: main.rs
rust-xp-ollama-main/: Cargo.toml
rust-xp-ollama-main/examples/: c04-embeddings.rs  c05-models.rs
rust-xp-ollama-main/src/: lib.rs
rust-xp-ollama-main/src/splitter/: char_splitter.rs  mod.rs
rusty_oll/: Cargo.toml
rusty_oll/src/: main.rs
src/: lib.rs
src/splitter/: word_spliter.rs
tcp_ollama_server/: Cargo.toml
tcp_ollama_server/src/: main.rs
