[package]
name = "ollama_websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

warp = "0.3"

futures = "0.3"

tokio-tungstenite = "0.15"

ollama-rs = "0.1"

