[package]
name = "rusty_oll"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# -- Ollama
ollama-rs = {version = "0.1", features = ["stream"]}
# -- Files
simple-fs = { version = "0.1", features = ["full"] }
# -- Others
derive_more = {version = "1.0.0-beta", features = ["from"] }
tokio-stream = "0.1"
rusty_ollama = "0.1.1"
futures-util = "0.3"